@@ -48,6 +48,9 @@
 					Windows now better remember their window positions and sizes
 				</li>
 				<li>
+					<a href="manual.html#createPixmap"><code>createPixmap()</code></a> can now read images from open file handles
+				</li>
+				<li>
 					Input: doubleclick marks the whole line now
 				</li>
 				<li>
